Added authentication with auth0

--- a/.gitignore
+++ b/.gitignore
@@ -123,4 +123,6 @@ dist
 # Ignore all local history of files
 .history
 
+#skip env configs
+.env
 # End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode
